test/extern/ferguson/invalid-array-to-scalar.good
invalid-array-to-scalar.chpl:4: error: mismatched type for 'arr' when calling 'myFunc'
invalid-array-to-scalar.chpl:8: note: function called here
note: check that the argument types match the C function signature
