test/extern/ferguson/invalid-array-to-scalar.c
#include "invalid-array-to-scalar.h"
void myFunc(float *arr) { }
